# proofplay-txline

./: .gitignore  Anchor.toml  FEEDBACK.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.keys/: pusdc-mint.json
app/: next.config.mjs  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/faucet/: route.ts
app/src/app/api/fixtures/: route.ts
app/src/app/api/market/[address]/: route.ts
app/src/app/api/markets/: route.ts
app/src/app/api/tx/bet/: route.ts
app/src/app/api/tx/claim/: route.ts
app/src/app/api/tx/create/: route.ts
app/src/app/api/tx/settle/: route.ts
app/src/app/create/: page.tsx
app/src/app/market/[address]/: page.tsx
app/src/components/: FaucetButton.tsx  Providers.tsx  Receipt.tsx  WalletButton.tsx
app/src/idl/: proofplay.json
app/src/lib/: client.ts  server.ts
corpus-sample/18175918/: scores.jsonl
docs/: README.md
idls/: txoracle.json
keeper/: package.json
keeper/src/: common.ts  demo-replay.ts  index.ts  settler.ts  setup-mint.ts
programs/proofplay/: Cargo.toml
programs/proofplay/src/: lib.rs
tests/: consumer-flow.ts  settle-devnet.ts
